--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "sass": "^1.43.4",
+    "tshint": "^0.0.2",
     "typescript": "4.4.4"
   }
 }
