--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.0.6",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,11 +16,18 @@
     "semantic-ui-react": "^2.0.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
+    "postcss": "^8.3.11",
     "sass": "^1.43.4",
+    "tailwindcss": "^2.2.19",
     "tshint": "^0.0.2",
     "typescript": "4.4.4"
   }
