--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "ltgr.github.io",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "serve": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4"
   },
